<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="Playlist_maker">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="Media">Медиатека</string>
    <string name="Settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="app_share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_rules">Пользовательское соглашение</string>
    <string name="app_name">Playlist Maker</string>
    <string name="linkCourse">https://practicum.yandex.ru/android-developer/</string>
    <string name="emailSubject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="emailText">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="linkLegacy">https://yandex.ru/legal/practicum_offer/</string>
    <string name="myEMail">Vladsmog18@gmail.com</string>
    <string name="mailto">mailto:</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="error400">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету"</string>
    <string name="refresh">Обновить</string>
</resources>