<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/MainMenuBackgroundColor">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/Playlist_maker"
        android:textColor="@color/white"
        android:textSize="@dimen/TopText"
        android:textStyle="bold"
        android:paddingTop="14dp"
        android:paddingStart="17dp">


    </TextView>
    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="40dp">




        <Button
            android:id="@+id/search"
            style="@style/ActivityMainButtons"
            android:layout_weight="1"
            android:text="@string/search"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconTint="@color/MainMenuButton"
            app:cornerRadius="16dp"
            app:iconPadding="10dp"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/media"
            style="@style/ActivityMainButtons"
            android:layout_weight="1"
            android:text="@string/Media"
            app:icon="@drawable/media"
            app:iconGravity="textStart"
            app:iconTint="@color/MainMenuButton"
            app:cornerRadius="16dp"
            app:iconPadding="10dp"
            android:layout_marginBottom="@dimen/Margin16"/>
        <Button
            android:id="@+id/settings"
            style="@style/ActivityMainButtons"
            android:layout_weight="1"
            android:layout_marginBottom="28dp"
            android:text="@string/Settings"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconTint="@color/MainMenuButton"
            app:iconPadding="10dp"
            app:cornerRadius="@dimen/Margin16" />







    </LinearLayout>

</LinearLayout>
